--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@ Wie hoch ist der Zinssatz? </strong>  <button  onclick="window.open('Zins_Aufgab
 
     <pre><p class ="Aufgabe" ><strong>Aufgabe 19
 
->Nach 3 Jahren ist ein Kapital bei einem Zinssatz von 3,5 % auf 3326,15 € angewachsen.
+Nach 3 Jahren ist ein Kapital bei einem Zinssatz von 3,5 % auf 3326,15 € angewachsen.
 Wie hoch war das Anfangskapital Ko? </strong>      
 
 Ihr Ergebnis: <input type="text" id="Eintrag19" maxlength="4" size="1" style= background-color:yellow > %</input> <button id="Pruef19" onclick="Aufgabe19()">Prüfen</button> </p></pre>
