--- a/Zins_Aufgabe24.html
+++ b/Zins_Aufgabe24.html
@@ -12,17 +12,17 @@
 
     <style>
                
-        .Aufgabe { font-size:  1em;  font-family: monospace, monospace;margin:0.5em;}
+        .Aufgabe { font-size:  0.9em;  font-family: monospace, monospace;margin:0.5em;}
         
     </style>
 
-<pre><p class ="Aufgabe">Zins Aufgabe 24
+<pre><b><p class ="Aufgabe">Zins Aufgabe 24
 
-Für ein Bauvorhaben gibt eine Bank ein Darlehen von 80 000 € 
-zu einem Zinssatz von 4,5 %.
+Für ein Bauvorhaben gibt eine Bank ein Darlehen 
+von 80 000 € zu einem Zinssatz von 4,5 %.
 a) Wie hoch ist der Jahreszins ohne Tilgung? 
 b) Wie viel muss der Kunde insgesamt zurückzahlen, 
-wenn er jährlich 10% der Darlehenssumme tilgt?                               
+wenn er jährlich 10% der Darlehenssumme tilgt?
 
 a) 
  
@@ -36,8 +36,10 @@ Schluss auf die Einheit
  
 Gesuchte Größe 
  
-4,5 % entsprechen 4,5 * 800 € = <span style="color:red;">3 600 €</span>. 
- ----------------------------------------- 
+4,5 % entsprechen 
+
+4,5 * 800 € = <span style="color:red;">3 600 €</span>. 
+----------------------------------------- 
  
                                 K * p    
 Berechnung mit der Formel  Z = -------- 
@@ -53,24 +55,27 @@ Z = ----------------- = <span style="color:red;">3 600 €</span>
  
 b)  
  
-Bei einer Tilgung von 8 000 € jährlich braucht der Kunde 80 000 €/8 000 €/Jahr = 10 Jahre, 
+Bei einer Tilgung von 8 000 € jährlich braucht 
+der Kunde 80 000 €/8 000 €/Jahr = 10 Jahre, 
 dann ist er schuldenfrei. 
  
 Zinsen im 2. Jahr:  
 4,5 % von 72 000 € = 3 240 €. usw. 
  
-              Schulden in €     Zinsen in €     Tilgung in €      
-1. Jahr         80 000             3600            8000  
-2. Jahr         72 000             3240            8000   
-3. Jahr         64 000             2880            8000  
-4. Jahr         56 000             2520            8000 
-5. Jahr         48 000             2160            8000  
-6. Jahr         40 000             1800            8000  
-7. Jahr         32 000             1440            8000 
-8. Jahr         24 000             1080            8000 
-9. Jahr         16 000              720            8000  
-10. Jahr         8 000              360            8000  
-                -----------------------   
-11. Jahr             0           19 800 
+        Schulden in € Zinsen in € Tilgung in €
+1. Jahr    80 000        3600       8000  
+2. Jahr    72 000        3240       8000   
+3. Jahr    64 000        2880       8000  
+4. Jahr    56 000        2520       8000 
+5. Jahr    48 000        2160       8000  
+6. Jahr    40 000        1800       8000  
+7. Jahr    32 000        1440       8000 
+8. Jahr    24 000        1080       8000 
+9. Jahr    16 000         720       8000  
+10. Jahr    8 000         360       8000  
+         -----------------------   
+11. Jahr       0       19 800 
  
-Der Kunde muss insgesamt 80 000 € + 19 800 € = <span style="color:red;">99 800 €</span> zurückzahlen.</p></pre>
+Der Kunde muss insgesamt 
+
+80 000 € + 19 800 € = <span style="color:red;">99 800 €</span> zurückzahlen.</p></b></pre>
