--- a/Zins_Aufgabe32.html
+++ b/Zins_Aufgabe32.html
@@ -64,11 +64,7 @@ Laufzeit n = 6 Jahre
                       100 
  
                  p   
-12,7258 = (1 + -----)<sup>6</sup> |<span style = "font-size:1.2em;"><math><mroot>
-      <mspace height="1em" width="0em" depth="0em"/>
-      <mn>6</mn>
-    </mroot>
-  </math></span>
+12,7258 = (1 + -----)<sup>6</sup> |&#x2076;&#8730;
                 100
  
               p   
