--- a/Zins_Aufgabe32.html
+++ b/Zins_Aufgabe32.html
@@ -64,7 +64,7 @@ Laufzeit n = 6 Jahre
                       100 
  
                  p   
-12,7258 = (1 + -----)<sup>6</sup> |&#x2076;&#8730;
+12,7258 = (1 + -----)<sup>6</sup> |&#8310;&#8730;
                 100
  
               p   
