--- a/Zins_Aufgabe33.html
+++ b/Zins_Aufgabe33.html
@@ -48,11 +48,7 @@ Laufzeit n = 5 Jahre
                          100 
  
                 p    
-1,1866 = (1 + -----)<sup>5</sup> |<span style = "font-size:1.2em;"><math><mroot>
-      <mspace height="1em" width="0em" depth="0em"/>
-      <mn>5</mn>
-    </mroot>
-  </math></span> 
+1,1866 = (1 + -----)<sup>5</sup> |<sup>5</sup>&#8730;
                100 
  
               p 
