--- a/Zins_Aufgabe35.html
+++ b/Zins_Aufgabe35.html
@@ -35,11 +35,7 @@ Laufzeit n = 9 Jahre
                   100 
  
                 p 
-1,4178 = (1 + -----)<sup>9</sup> | <span style = "font-size:1.2em;"><math><mroot>
-      <mspace height="1em" width="0em" depth="0em"/>
-      <mn>9</mn>
-    </mroot>
-  </math></span> 
+1,4178 = (1 + -----)<sup>9</sup> | <sup>9</sup>&#8730;
                100 
  
                p 
