--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 Wie viel Zinsen sind jährlich für ein Darlehen 
 von 6800 € bei einem Zinssatz von 7,3 % zu zahlen?
 
-Ihr Ergebnis: <input type="text" id="Eintrag1" maxlength="6" size="2" style= background-color:yellow > €</input> <button id="Pruef1" onclick="Aufgabe1()">Prüfen</button></p></pre>
+ <input type="text" id="Eintrag1" maxlength="6" size="2" style= background-color:yellow > €</input> <button id="Pruef1" onclick="Aufgabe1()">Prüfen</button></p></pre>
   
                      <script>
                         function Aufgabe1() { 
@@ -65,7 +65,7 @@ Für seine Hypothek muss ein Bauherr jährlich
 Der Zinssatz beträgt 7,5 %.
 Wie hoch ist die Hypothek? 
 
-Ihr Ergebnis: <input type="text" id="Eintrag3" maxlength="6" size="2" style= background-color:yellow > €</input> <button id="Pruef3" onclick="Aufgabe3()">Prüfen</button></p></pre>
+ <input type="text" id="Eintrag3" maxlength="6" size="2" style= background-color:yellow > €</input> <button id="Pruef3" onclick="Aufgabe3()">Prüfen</button></p></pre>
   
   
                      <script>c
@@ -99,7 +99,7 @@ Eine Kundin will einen Kredit über 5000 € nach
 einem Jahr zurückzahlen. Welchen Betrag muss sie 
 der Bank bei einem Zinssatz von 12,3 % überweisen.
 
-Ihr Ergebnis: <input type="text" id="Eintrag5" maxlength="4" size="1" style= background-color:yellow > €</input> <button id="Pruef5" onclick="Aufgabe5()">Prüfen</button></p></pre>
+ <input type="text" id="Eintrag5" maxlength="4" size="1" style= background-color:yellow > €</input> <button id="Pruef5" onclick="Aufgabe5()">Prüfen</button></p></pre>
   
      
      <script>
@@ -135,7 +135,7 @@ Wie hoch ist der Zinssatz?
 Tragen Sie das Ergebnis auf 1 Stelle nach dem 
 Komma gerundet ein.
 
-Ihr Ergebnis:  <input type="text" id="Eintrag7" maxlength="3" size="1" style= background-color:yellow > %</input> <button id="Pruef7" onclick="Aufgabe7()">Prüfen</button></p></pre>
+  <input type="text" id="Eintrag7" maxlength="3" size="1" style= background-color:yellow > %</input> <button id="Pruef7" onclick="Aufgabe7()">Prüfen</button></p></pre>
     
 
                     <script>
@@ -171,7 +171,7 @@ nach 4 Jahren abgehoben werden?
 b) Wie hoch sind die Gesamtzinsen, wenn sie jedes
 Jahr abgehoben werden?
 
-Ihr Ergebnis: <input type="text" id="Eintrag9" maxlength="6" size="2" style= background-color:yellow > €</input> <button id="Pruef9" onclick="Aufgabe9()">Prüfen</button></p></pre>
+ <input type="text" id="Eintrag9" maxlength="6" size="2" style= background-color:yellow > €</input> <button id="Pruef9" onclick="Aufgabe9()">Prüfen</button></p></pre>
   
 
 <script>
@@ -213,7 +213,7 @@ des Jahres den geliehenen Betrag plus 55 €
 zurückhaben. Wie hoch ist der Zinssatz des 
 günstigeren Angebots? 
 
-Ihr Ergebnis: <input type="text" id="Eintrag11" maxlength="3" size="1" style= background-color:yellow > %</input> <button id="Pruef11" onclick="Aufgabe11()">Prüfen</button></p></pre>
+ <input type="text" id="Eintrag11" maxlength="3" size="1" style= background-color:yellow > %</input> <button id="Pruef11" onclick="Aufgabe11()">Prüfen</button></p></pre>
   
 
                     <script>
@@ -243,7 +243,7 @@ Eine Sparkasse verleiht 16 400 € für 70 Tage zu
 einem Zinssatz von 10,8 %.
 Wie hoch sind die Zinsen? 
 
-Ihr Ergebnis: <input type="text" id="Eintrag13" maxlength="6" size="2" style= background-color:yellow > €</input> <button id="Pruef13" onclick="Aufgabe13()">Prüfen</button> </p></pre>
+ <input type="text" id="Eintrag13" maxlength="6" size="2" style= background-color:yellow > €</input> <button id="Pruef13" onclick="Aufgabe13()">Prüfen</button> </p></pre>
   
                     <script>
                         function Aufgabe13() { 
@@ -278,7 +278,7 @@ Kunde bezahlen, wenn er sein Konto 15 Tage mit
 3500 € überziehtund die Bank 13,5 % Überziehungs-
 zinsen verlangt? 
 
-Ihr Ergebnis: <input type="text" id="Eintrag15" maxlength="5" size="1" style= background-color:yellow > €</input> <button id="Pruef15" onclick="Aufgabe15()">Prüfen</button> </p></pre>
+ <input type="text" id="Eintrag15" maxlength="5" size="1" style= background-color:yellow > €</input> <button id="Pruef15" onclick="Aufgabe15()">Prüfen</button> </p></pre>
   
 
                     <script>
@@ -310,7 +310,7 @@ einen Zinssatz von 6%. Als der Kunde das Geld
 abhebt, bekommt er 55 € Zinsen.
 Wie viel Tage war das Geld angelegt?  
 
-Ihr Ergebnis: <input type="text" id="Eintrag17" maxlength="2" size="1" style= background-color:yellow > Tage</input> <button id="Pruef17" onclick="Aufgabe17()">Prüfen</button> </p></pre>
+ <input type="text" id="Eintrag17" maxlength="2" size="1" style= background-color:yellow > Tage</input> <button id="Pruef17" onclick="Aufgabe17()">Prüfen</button> </p></pre>
   
                     <script>
                         function Aufgabe17() { 
@@ -341,7 +341,7 @@ Nach 3 Jahren ist ein Kapital bei einem Zinssatz
 von 3,5 % auf 3326,15 € angewachsen.
 Wie hoch war das Anfangskapital Ko?       
 
-Ihr Ergebnis: <input type="text" id="Eintrag19" maxlength="4" size="1" style= background-color:yellow > %</input> <button id="Pruef19" onclick="Aufgabe19()">Prüfen</button> </p></pre>
+ <input type="text" id="Eintrag19" maxlength="4" size="1" style= background-color:yellow > %</input> <button id="Pruef19" onclick="Aufgabe19()">Prüfen</button> </p></pre>
   
 
                     <script>
@@ -380,7 +380,7 @@ a) Nach wie viel Jahren hat sich der Betrag
 verdoppelt, wenn das Enkelkind keine Zinsen 
 abhebt?
 
-Ihr Ergebnis: <input type="text" id="Eintrag21" maxlength="3" size="1" style= background-color:yellow > Jahre</input> <button id="Pruef21" onclick="Aufgabe21()">Prüfen</button>
+ <input type="text" id="Eintrag21" maxlength="3" size="1" style= background-color:yellow > Jahre</input> <button id="Pruef21" onclick="Aufgabe21()">Prüfen</button>
 
 b) Nach wie viel Jahren hätte sich ein Kapital 
 von 10 000 € bei 6 % verdoppelt?   </p></pre>
@@ -420,7 +420,7 @@ Wie viel Zinsen hätte es bekommen,
 a) bei doppelt so hohen Ersparnissen und doppelt 
 so hohem Zinssatz? 
 
-Ihr Ergebnis: <input type="text" id="Eintrag23" maxlength="4" size="1" style= background-color:yellow > €</input> <button id="Pruef23" onclick="Aufgabe23()">Prüfen</button>
+ <input type="text" id="Eintrag23" maxlength="4" size="1" style= background-color:yellow > €</input> <button id="Pruef23" onclick="Aufgabe23()">Prüfen</button>
 
 b) bei doppelt so hohen Ersparnissen und halb so 
 hohem Zinssatz?   
@@ -461,7 +461,7 @@ Nach einem Jahr hat der eine 2,30 € mehr auf
 seinem Konto.
 Welchen Betrag haben sie angelegt? 
 
-Ihr Ergebnis: <input type="text" id="Eintrag25" maxlength="3" size="1" style= background-color:yellow > €</input> <button id="Pruef25" onclick="Aufgabe25()">Prüfen</button> </p></pre>
+ <input type="text" id="Eintrag25" maxlength="3" size="1" style= background-color:yellow > €</input> <button id="Pruef25" onclick="Aufgabe25()">Prüfen</button> </p></pre>
   
 
                     <script>
@@ -500,7 +500,7 @@ Auszahlung bei 7,5 %.
 Wie hoch sind die Kosten für das günstigere 
 Angebot? 
 
-Ihr Ergebnis: <input type="text" id="Eintrag27" maxlength="4" size="1" style= background-color:yellow > €</input> <button id="Pruef27" onclick="Aufgabe27()">Prüfen</button> </p></pre>
+ <input type="text" id="Eintrag27" maxlength="4" size="1" style= background-color:yellow > €</input> <button id="Pruef27" onclick="Aufgabe27()">Prüfen</button> </p></pre>
   
 
                     <script>
@@ -531,7 +531,7 @@ a) Auf welchen Betrag sind 10 000 € nach 3 Jahren
 bei einem Zinssatz von 4 % mit Zinseszins 
 angewachsen?
 
-Ihr Ergebnis: <input type="text" id="Eintrag29" maxlength="8" size="4" style= background-color:yellow > €</input> <button id="Pruef29" onclick="Aufgabe29()">Prüfen</button>
+ <input type="text" id="Eintrag29" maxlength="8" size="4" style= background-color:yellow > €</input> <button id="Pruef29" onclick="Aufgabe29()">Prüfen</button>
 
 b) Wie hoch sind die Zinsen insgesamt, bei 
 jährlicher Abhebung? </p></pre>
@@ -569,7 +569,7 @@ Auf welchen Betrag ist sein Guthaben nach
 wenn der Zinssatz 5 % beträgt und er in der 
 Zwischenzeit kein Geld abhebt? 
 
-Ihr Ergebnis: <input type="text" id="Eintrag31" maxlength="6" size="2" style= background-color:yellow > €</input> <button id="Pruef31" onclick="Aufgabe31()">Prüfen</button> </p></pre>
+ <input type="text" id="Eintrag31" maxlength="6" size="2" style= background-color:yellow > €</input> <button id="Pruef31" onclick="Aufgabe31()">Prüfen</button> </p></pre>
   
 
                     <script>
@@ -608,7 +608,7 @@ In weiteren 5 Jahren beträgt das Guthaben
 3086,03 €.
 a) Welchen Betrag hat der Sparer angelegt?   
 
-Ihr Ergebnis: <input type="text" id="Eintrag33" maxlength="4" size="1" style= background-color:yellow > €</input> <button id="Pruef33" onclick="Aufgabe33()">Prüfen</button> 
+ <input type="text" id="Eintrag33" maxlength="4" size="1" style= background-color:yellow > €</input> <button id="Pruef33" onclick="Aufgabe33()">Prüfen</button> 
 
 b) Nach wie viel Jahren hat sich das 
 Anfangskapital mehr als verdoppelt?     </p></pre>
@@ -644,7 +644,7 @@ Ab welcher Kapitaleinlage beträgt der Unterschied
 Jemand will 3456 € so anlegen, dass er nach 
 9 Jahren 4900 € hat.
 Wie hoch muss der Zinssatz sein?   
-Ihr Ergebnis: <input type="text" id="Eintrag35" maxlength="4" size="1" style= background-color:yellow > %</input> <button id="Pruef35" onclick="Aufgabe35()">Prüfen</button> </p></pre>
+ <input type="text" id="Eintrag35" maxlength="4" size="1" style= background-color:yellow > %</input> <button id="Pruef35" onclick="Aufgabe35()">Prüfen</button> </p></pre>
   
 
                     <script>
