--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Zinsrechnung</title>
   
 </head>
-<body style="background-color: #B9D1EA; margin-top: 1em; ">
+<body style="background-color: white; margin-top: 1em; ">
        
 
     <style> 
