--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         .Text2 { font-size: 1em; font-family: Verdana,Sans-serif;margin-top:1em;margin-left:0.5em;}
                 
         .Aufgabe { font-size: 0.9em;  font-family: monospace, monospace;margin:0.5em;}
-        button {background-color:white; font-family: Verdana, Sans-serif; }
+        button { font-family: Verdana, Sans-serif; }
         input {background-color:yellow; }
     </style>
     
